--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
     <h1>TECNOLOGIA NA AGRICULTURA</h1>
 
-    <p>Em decorrência da implantação da tecnologia nas atividades rurais, a agricultura está se tornando cada vez mais eficiente e consciente ambientalmente. Abrangendo uma vasta variedade de técnicas e ferramentas que possibilitam aos agricultores aprimorar o plantio e a criação de animais.</p>
+    <div>
+        <img class="banner" src="img/esboço banner.webp" alt="banner">
+    </div>
+
+    <div class="texto1">
+        <p>Em decorrência da implantação da tecnologia nas atividades rurais, a agricultura está se tornando cada vez mais eficiente e consciente ambientalmente. Abrangendo uma vasta variedade de técnicas e ferramentas que possibilitam aos agricultores aprimorar o plantio e a criação de animais.</p>
+    </div>
 </body>
 </html>
