--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>TECNOLOGIA NA AGRICULTURA</h1>
 
     <div>
-        <img class="banner" src="img/esboço banner.webp" alt="banner">
+        <img class="banner" src="imagens/banner1.jpg" alt="banner">
     </div>
 
     <div class="texto1">
