--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
 </head>
 
 <body>
-    <h1>TECNOLOGIA NA AGRICULTURA</h1>
+    <h1>TECNOLOGIA TRANSFORMANDO O SETOR AGRÍCOLA</h1>
 
     <div>
         <img class="banner" src="imagens/banner1.png" alt="banner">
     </div>
+
+    <section class="topicos">
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">TECNOLOGIAS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">IMPACTOS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">CASOS</a>
+            </li>   
+        </ul>
+    </section>
 
     <div class="texto1">
         <p>Em decorrência da implantação da tecnologia nas atividades rurais, a agricultura está se tornando cada vez mais eficiente e consciente ambientalmente. Abrangendo uma vasta variedade de técnicas e ferramentas que possibilitam aos agricultores aprimorar o plantio e a criação de animais.</p>
