--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <section class="topicos">
-        <ul class="topicos__lista">
+        <ol class="topicos__lista">
             <li class="topicos__item">
                 <a href="#" class="topicos__link">TECNOLOGIAS</a>
             </li>
@@ -27,7 +27,7 @@
             <li class="topicos__item">
                 <a href="#" class="topicos__link">CASOS</a>
             </li>
-        </ul>
+        </ol>
     </section>
 
     <div class="texto1">
