--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
         <img class="banner" src="imagens/banner1.png" alt="banner">
     </div>
 
-    <section class="topicos">
-        <ul class="topicos__lista">
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">TECNOLOGIAS</a>
+    <section class="menu">
+        <ul class="menu_lista">
+            <li class="menu_itens">
+                <a href="index.html" class="_link">INÍCIO</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">IMPACTOS</a>
+            <li class="menu_item">
+                <a href="tecnologias.html" class="menu_link">TECNOLOGIAS</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">CASOS</a>
+            <li class="menu_item">
+                <a href="impactos.html" class="menu_link">IMPACTOS</a>
+            </li>
+            <li class="menu_item">
+                <a href="casos.html" class="menu_link">CASOS</a>
             </li>
         </ul>
     </section>
