--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -16,16 +16,16 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_itens">
-                <a href="index.html" class="_link">INÍCIO</a>
+                <a class="_link" href="index.html">INÍCIO</a>
             </li>
             <li class="menu_item">
-                <a href="tecnologias.html" class="menu_link">TECNOLOGIAS</a>
+                <a class="menu_link" href="tecnologias.html">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a href="impactos.html" class="menu_link">IMPACTOS</a>
+                <a class="menu_link" href="impactos.html">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a href="casos.html" class="menu_link">CASOS</a>
+                <a class="menu_link" href="casos.html">CASOS</a>
             </li>
         </ul>
     </section>
