--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -19,13 +19,13 @@
                 <a class="_link" href="index.html">INÍCIO</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="tecnologias.html">TECNOLOGIAS</a>
+                <a class="menu_link" href="html/tecnologias.html">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="impactos.html">IMPACTOS</a>
+                <a class="menu_link" href="html/impactos.html">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="casos.html">CASOS</a>
+                <a class="menu_link" href="html/casos.html">CASOS</a>
             </li>
         </ul>
     </section>
