--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -16,7 +16,7 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_itens">
-                <a class="_link" href="index.html">INÍCIO</a>
+                <a class="menu_link" href="index.html">INÍCIO</a>
             </li>
             <li class="menu_item">
                 <a class="menu_link" href="html/tecnologias.html">TECNOLOGIAS</a>
