--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_itens">
-                <a href="index.html" class="_link">INÍCIO</a>
+                <a href="#" class="_link">INÍCIO</a>
             </li>
             <li class="menu_item">
-                <a href="tecnologias.html" class="menu_link">TECNOLOGIAS</a>
+                <a href="#" class="menu_link">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a href="impactos.html" class="menu_link">IMPACTOS</a>
+                <a href="#" class="menu_link">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a href="casos.html" class="menu_link">CASOS</a>
+                <a href="#" class="menu_link">CASOS</a>
             </li>
         </ul>
     </section>
