--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li class="menu_item">
                 <a href="#" class="menu_link">CASOS</a>
             </li>
+            <li class="menu_item">
+                <a href="#" class="menu_link">CASOS</a>
+            </li>
         </ul>
     </section>
 
