--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_item">
+                <a href="#" class="menu_link">INÍCIO</a>
+            </li>
+            <li class="menu_item">
                 <a href="#" class="menu_link">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
                 <a href="#" class="menu_link">IMPACTOS</a>
-            </li>
-            <li class="menu_item">
-                <a href="#" class="menu_link">CASOS</a>
             </li>
             <li class="menu_item">
                 <a href="#" class="menu_link">CASOS</a>
