--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_item">
-                <a href="#" class="menu_link">INÍCIO</a>
+                <a href="html/tecnologias.html" class="menu_link">INÍCIO</a>
             </li>
             <li class="menu_item">
                 <a href="#" class="menu_link">TECNOLOGIAS</a>
