--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <a href="html/tecnologias.html" class="menu_link">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a href="#" class="menu_link">IMPACTOS</a>
+                <a href="html/impactos.html" class="menu_link">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a href="#" class="menu_link">CASOS</a>
+                <a href="html/casos.html" class="menu_link">CASOS</a>
             </li>
         </ul>
     </section>
