--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -16,16 +16,16 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_itens">
-                <a class="menu_link" href="index.html">INÍCIO</a>
+                <a class="menu_link" href="#">INÍCIO</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="html/tecnologias.html">TECNOLOGIAS</a>
+                <a class="menu_link" href="#">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="html/impactos.html">IMPACTOS</a>
+                <a class="menu_link" href="#">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="html/casos.html">CASOS</a>
+                <a class="menu_link" href="#">CASOS</a>
             </li>
         </ul>
     </section>
