--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -16,13 +16,13 @@
     <section class="menu">
         <ul class="menu_lista">
             <li class="menu_itens">
-                <a class="menu_link" href="#">INÍCIO</a>
+                <a class="menu_link" href="index.html">INÍCIO</a>
             </li>
             <li class="menu_item">
                 <a class="menu_link" href="#">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="#">IMPACTOS</a>
+                <a class="menu_link" href="html/impactos.html">IMPACTOS</a>
             </li>
             <li class="menu_item">
                 <a class="menu_link" href="#">CASOS</a>
