--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -22,7 +22,7 @@
                 <a class="menu_link" href="#">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="html/impactos.html">IMPACTOS</a>
+                <a class="menu_link" href="impactos.html">IMPACTOS</a>
             </li>
             <li class="menu_item">
                 <a class="menu_link" href="#">CASOS</a>
