--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -19,7 +19,7 @@
                 <a class="menu_link" href="index.html">INÍCIO</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="#">TECNOLOGIAS</a>
+                <a class="menu_link" href="tecnologias.html">TECNOLOGIAS</a>
             </li>
             <li class="menu_item">
                 <a class="menu_link" href="impactos.html">IMPACTOS</a>
