--- a/html/impactos.html
+++ b/html/impactos.html
@@ -25,7 +25,7 @@
                 <a class="menu_link" href="impactos.html">IMPACTOS</a>
             </li>
             <li class="menu_item">
-                <a class="menu_link" href="casos.htmlok">CASOS</a>
+                <a class="menu_link" href="casos.html">CASOS</a>
             </li>
         </ul>
     </section>
