--- a/html/casos.html
+++ b/html/casos.html
@@ -7,7 +7,7 @@
 
     <title>d</title>
 
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="styles/style4.css">
 
 </head>
 
