--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -7,7 +7,7 @@
 
     <title>d</title>
 
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="styles/style2.css">
 
 </head>
 
