--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>AGRINHO</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
