--- a/html/casos.html
+++ b/html/casos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>d</title>
+    <title>CASOS</title>
 
     <link rel="stylesheet" href="styles/style4.css">
 
