--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -13,19 +13,19 @@
 
 
 <body>
-    <section class="menu">
-        <ul class="menu_lista">
-            <li class="menu_itens">
-                <a class="menu_link" href="index.html">INÍCIO</a>
+    <section class="menu2">
+        <ul class="menu_lista2">
+            <li class="menu_itens2">
+                <a class="menu_link2" href="index.html">INÍCIO</a>
             </li>
-            <li class="menu_item">
-                <a class="menu_link" href="tecnologias.html">TECNOLOGIAS</a>
+            <li class="menu_item2">
+                <a class="menu_link2" href="tecnologias.html">TECNOLOGIAS</a>
             </li>
-            <li class="menu_item">
-                <a class="menu_link" href="impactos.html">IMPACTOS</a>
+            <li class="menu_item2">
+                <a class="menu_link2" href="impactos.html">IMPACTOS</a>
             </li>
-            <li class="menu_item">
-                <a class="menu_link" href="casos.html">CASOS</a>
+            <li class="menu_item2">
+                <a class="menu_link2" href="casos.html">CASOS</a>
             </li>
         </ul>
     </section>
