--- a/index.html
+++ b/index.html
@@ -36,5 +36,34 @@
     <div class="texto1">
         <p>Em decorrência da implantação da tecnologia nas atividades rurais, a agricultura está se tornando cada vez mais eficiente e consciente ambientalmente. Abrangendo uma vasta variedade de técnicas e ferramentas que possibilitam aos agricultores aprimorar o plantio e a criação de animais.</p>
     </div>
+
+
+
+
+    <div class="card">
+        <!--1° linha-->
+        <div class="card__descrição">
+            <!--1° coluna-->
+            <div class="desrição">
+                <h3 class="descrição__título">Próximo lançamento...</h3>
+                <h2 class="descrição__título-livro">1989 (Taylor's Version)</h2>
+                <p class="descrição__texto">1989 (Taylor's Version), a mais nova regravação de Taylor Swift estará disponível a partir do dia 27 de outubro. </p>
+            </div>
+            <!--2° coluna-->
+            <img src="img/1989.webp" class="descrição__imagem">
+        </div>
+
+        <!--2° linha-->
+        <div class="card__botões">
+            <ul class="botões">
+                <li class="botões__item"><img src="img/coracao.svg" alt="Adicionar no carrinho" width="35px"></li>
+                <li class="botões__item"><img src="img/bolsa-de-compras.svg" alt="Adicionar no carrinho" width="35px"></li>
+            </ul>
+            <!--2° coluna-->
+            <a href="#" class="botões__ancora">Saiba mais</a>
+        
+        </div>
+    </div>
+
 </body>
 </html>
