--- a/index.html
+++ b/index.html
@@ -45,20 +45,14 @@
         <div class="card__descrição">
             <!--1° coluna-->
             <div class="desrição">
-                <h3 class="descrição__título">Próximo lançamento...</h3>
-                <h2 class="descrição__título-livro">1989 (Taylor's Version)</h2>
-                <p class="descrição__texto">1989 (Taylor's Version), a mais nova regravação de Taylor Swift estará disponível a partir do dia 27 de outubro. </p>
+                <h3 class="descrição__título"></h3>
+                <h2 class="descrição__título-livro">AGRICULTURA DE PRECISÃO</h2>
+                <p class="descrição__texto">Saiba mais sobre agricultora de precisão com uso de drones e sensores </p>
             </div>
             <!--2° coluna-->
-            <img src="img/1989.webp" class="descrição__imagem">
+            <img src="imagens/drone1.jpg" class="descrição__imagem">
         </div>
 
-        <!--2° linha-->
-        <div class="card__botões">
-            <ul class="botões">
-                <li class="botões__item"><img src="img/coracao.svg" alt="Adicionar no carrinho" width="35px"></li>
-                <li class="botões__item"><img src="img/bolsa-de-compras.svg" alt="Adicionar no carrinho" width="35px"></li>
-            </ul>
             <!--2° coluna-->
             <a href="#" class="botões__ancora">Saiba mais</a>
         
