--- a/index.html
+++ b/index.html
@@ -53,10 +53,17 @@
             <img src="imagens/drone1.jpg" class="descrição__imagem">
         </div>
 
-            <!--2° coluna-->
-            <a href="#" class="botões__ancora">Saiba mais</a>
+            <!--2° linha-->
+            <div class="card__botões">
+                <ul class="botões">
+                    <li class="botões__item"><img src="img/coracao.svg" alt="Adicionar no carrinho" width="35px"></li>
+                    <li class="botões__item"><img src="img/bolsa-de-compras.svg" alt="Adicionar no carrinho" width="35px"></li>
+                </ul>
+
+             <!--2° coluna-->
+                <a href="#" class="botões__ancora">Saiba mais</a>
         
-        </div>
+            </div>
     </div>
 
 </body>
