--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="desrição">
                 <h3 class="descrição__título"></h3>
                 <h2 class="descrição__título-livro">AGRICULTURA DE PRECISÃO</h2>
-                <p class="descrição__texto">Saiba mais sobre agricultora de precisão com uso de drones e sensores </p>
+                <p class="descrição__texto">Saiba mais sobre agricultura de precisão com uso de drones e sensores </p>
             </div>
             <!--2° coluna-->
             <img src="imagens/drone1.jpg" class="descrição__imagem">
