--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>TECNOLOGIA TRANSFORMANDO O SETOR AGRÍCOLA</h1>
 
     <div>
-        <img class="banner" src="imagens/banner2.png" alt="banner">
+        <img class="banner" src="" alt="banner">
     </div>
 
     <section class="menu">
