--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="banner" src="" alt="banner">
     </div>
 
-    <section class="menu">
+    <header class="menu">
         <ul class="menu_lista">
             <li class="menu_item">
                 <a href="#" class="menu_link">INÍCIO</a>
@@ -31,7 +31,7 @@
                 <a href="html/casos.html" class="menu_link">CASOS</a>
             </li>
         </ul>
-    </section>
+    </header>
 
     <div class="texto1">
         <p>Em decorrência da implantação da tecnologia nas atividades rurais, a agricultura está se tornando cada vez mais eficiente e consciente ambientalmente. Abrangendo uma vasta variedade de técnicas e ferramentas que possibilitam aos agricultores aprimorar o plantio e a criação de animais.</p>
